[package]
name = "urdfix"
version = "0.1.0"
edition = "2025"
authors = ["Pratyay Pandey <p.pandey@berkeley.edu>"]
description = "🦾 A fast, Rust-powered CLI for linting, formatting, and fixing URDF robot descriptions."
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
indexmap = "2.0"

[[bin]]
name = "urdfix"
path = "src/main.rs" 